no longer have no-wrapping hrefs

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,6 +14,12 @@ blockquote{
   border-left: 0.25em solid #6f777d;
 }
 
+/* I had to add this in otherwise we were getting weird line breaks on links. The just-the-docs css sets
+this to white-space: no-wrap. Not sure why. See: https://developer.mozilla.org/en-US/docs/Web/CSS/white-space */
+.main-content a{
+  white-space: normal;
+}
+
 .margin-zero{
   margin: 0;
 }
